
VERSION 0.8.2cvs
================

2007-05-22  Vincent Richard  <vincent@vincent-richard.net>

 * Implemented thread-safe reference counting for smart pointers,
   whenever possible (GCC built-in functions / pthread / Win32).

2007-03-28  Vincent Richard  <vincent@vincent-richard.net>

 * SMTPTransport.cpp: better parsing of ESMTP extensions.

2007-03-02  Vincent Richard  <vincent@vincent-richard.net>

 * Maildir: added support for "Courier" Maildir.

2006-12-20  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.8.2.


VERSION 0.8.1
=============

2006-11-08  Vincent Richard  <vincent@vincent-richard.net>

 * Imbue classic "C" locale for the output of message parts and
   protocol commands (thanks to Mörtsell Anders).

2006-10-11  Vincent Richard  <vincent@vincent-richard.net>

 * Renamed 'vmime::platformDependant' to 'vmime::platform'. The old
   name has been kept for compatibility with previous versions.

2006-10-02  Vincent Richard  <vincent@vincent-richard.net>

 * SMTPTransport.cpp: reissue EHLO command after a successful STARTTLS
   negociation.

 * word, wordEncoder: fixed bug #1096610 which caused encoding of a
   non-integral number of characters (and then, generation of
   incorrectly-formed words) with multi-bytes charsets.

2006-07-13  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed bugs in MHTML code: 'CID' prefix should not be case-sensitive;
   fixed detection of parts identified by a 'Content-Location'.

2006-04-23  Vincent Richard  <vincent@vincent-richard.net>

 * Added vmime::net::folder::destroy() to delete folders on IMAP and
   maildir stores.

2006-04-18  Vincent Richard  <vincent@vincent-richard.net>

 * Renamed 'byte' to 'byte_t' to fix compilation problems on Fedora
   core 5 (thanks to Rafael Fernandez).

2006-02-20  Vincent Richard  <vincent@vincent-richard.net>

 * net/imap/IMAPParser.hpp: added a "relaxed" mode to allow 8-bit
   characters where not allowed by the standard (thanks to Tim Teulings